[gd_scene load_steps=15 format=2]

[ext_resource path="res://Codigos/HUDS/telaPersonagens.gd" type="Script" id=1]
[ext_resource path="res://Imagens/spriteGirl.png" type="Texture" id=2]
[ext_resource path="res://Imagens/sprite boy grande 3_0.png" type="Texture" id=3]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Telas/HUDS/personagemCena.tscn" type="PackedScene" id=5]
[ext_resource path="res://Imagens/speaker.png" type="Texture" id=6]
[ext_resource path="res://Imagens/moldura.png" type="Texture" id=7]
[ext_resource path="res://Sons/sombotaopressionado.mp3" type="AudioStream" id=8]
[ext_resource path="res://Imagens/Voltar.png" type="Texture" id=9]
[ext_resource path="res://Imagens/pixilart-drawing (1).png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Fonts/classic_memesbruh03.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
font_data = SubResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 130
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Controle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -499, -35 )
script = ExtResource( 1 )

[node name="personagemCena" parent="." instance=ExtResource( 5 )]
visible = false

[node name="botaoSelecionado" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -13.0

[node name="fundo" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 10 )
expand = true

[node name="Escolha" type="Label" parent="."]
margin_top = 66.0
margin_right = 1914.0
margin_bottom = 234.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Escolha seu personagem:"
align = 1
valign = 1

[node name="MolduraJoao" type="Sprite" parent="."]
position = Vector2( 606, 626 )
texture = ExtResource( 7 )

[node name="SpriteJoao" type="Sprite" parent="MolduraJoao"]
position = Vector2( 1, -33.9999 )
scale = Vector2( 0.79, 0.79 )
texture = ExtResource( 3 )
hframes = 3
vframes = 3

[node name="NomeJoao" type="Label" parent="MolduraJoao"]
margin_left = -130.0
margin_top = 161.0
margin_right = 130.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Joao"

[node name="BotaoJoao" type="Button" parent="MolduraJoao"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -279.0
margin_top = -340.0
margin_right = 278.0
margin_bottom = 338.0

[node name="MolduraMaria" type="Sprite" parent="."]
position = Vector2( 1266, 622 )
texture = ExtResource( 7 )

[node name="NomeMaria" type="Label" parent="MolduraMaria"]
margin_left = -151.0
margin_top = 165.0
margin_right = 174.0
margin_bottom = 252.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Maria"

[node name="Sprite" type="Sprite" parent="MolduraMaria"]
position = Vector2( 6, -48 )
scale = Vector2( 0.72125, 0.72125 )
texture = ExtResource( 2 )
hframes = 3
vframes = 3

[node name="BotaoMaria" type="Button" parent="MolduraMaria"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -278.0
margin_top = -341.0
margin_right = 279.0
margin_bottom = 337.0

[node name="botaoSom" type="Button" parent="."]
margin_left = 1785.0
margin_top = 57.0
margin_right = 1870.0
margin_bottom = 137.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="Voltar" type="Sprite" parent="."]
position = Vector2( 89, 98 )
scale = Vector2( 9.5, 9.5 )
texture = ExtResource( 9 )

[node name="VoltarBtn" type="Button" parent="Voltar"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -5.0
margin_top = -5.0
margin_right = 16.0
margin_bottom = 15.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="mouse_entered" from="MolduraJoao/BotaoJoao" to="." method="_on_BotaoJoao_mouse_entered"]
[connection signal="mouse_exited" from="MolduraJoao/BotaoJoao" to="." method="_on_BotaoJoao_mouse_exited"]
[connection signal="pressed" from="MolduraJoao/BotaoJoao" to="." method="_on_BotaoJoao_pressed"]
[connection signal="mouse_entered" from="MolduraMaria/BotaoMaria" to="." method="_on_BotaoMaria_mouse_entered"]
[connection signal="mouse_exited" from="MolduraMaria/BotaoMaria" to="." method="_on_BotaoMaria_mouse_exited"]
[connection signal="pressed" from="MolduraMaria/BotaoMaria" to="." method="_on_BotaoMaria_pressed"]
[connection signal="pressed" from="botaoSom" to="." method="_on_botaoSom_pressed"]
[connection signal="pressed" from="Voltar/VoltarBtn" to="." method="_on_VoltarBtn_pressed"]
